# SKITR

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated_dup.js  classes.html  classskitter_1_1core_1_1Value-members.html  classskitter_1_1core_1_1Value__coll__graph.map  classskitter_1_1core_1_1Value_a0ac6371c7aa04361b1926fe1efe51206_icgraph.md5  classskitter_1_1core_1_1Value_a0ba0d64df67a44f0d21b4a26df8526a2_icgraph.map  classskitter_1_1core_1_1Value_a0f039b6513797993c638a9fa0fd4d03f_icgraph.md5  classskitter_1_1core_1_1Value_a1e0bd2d13e5284d3408366e0f380dffe_icgraph.map  classskitter_1_1core_1_1Value_a3678f9bd15db8fa9e0792645651af29c_cgraph.map  classskitter_1_1core_1_1Value_a3678f9bd15db8fa9e0792645651af29c_cgraph.md5  classskitter_1_1core_1_1Value_a3678f9bd15db8fa9e0792645651af29c_icgraph.map  classskitter_1_1core_1_1Value_a3678f9bd15db8fa9e0792645651af29c_icgraph.md5  classskitter_1_1core_1_1Value_a40c5863401f9be1667e9d9d8bb9302cf_cgraph.md5  classskitter_1_1core_1_1Value_a40c5863401f9be1667e9d9d8bb9302cf_icgraph.map  classskitter_1_1core_1_1Value_a47b5c52aae3646bcc5b6514f6cc93125_icgraph.md5  classskitter_1_1core_1_1Value_a4eb0aa7506a5dbd04edb0a5eac11f5a0_icgraph.map  classskitter_1_1core_1_1Value_a5763640d40a2979d558ec11d1a76e985_cgraph.md5  classskitter_1_1core_1_1Value_a5763640d40a2979d558ec11d1a76e985_icgraph.map  classskitter_1_1core_1_1Value_a5763640d40a2979d558ec11d1a76e985_icgraph.md5  classskitter_1_1core_1_1Value_a6183a84d9ff184c76d9ddfb02181d221_icgraph.map  classskitter_1_1core_1_1Value_a64b371e896afe7118eb40b5c0f74cb63_cgraph.md5  classskitter_1_1core_1_1Value_a6ce2465b448498ca7c24242a2930a635_icgraph.map  classskitter_1_1core_1_1Value_a6ce2465b448498ca7c24242a2930a635_icgraph.md5  classskitter_1_1core_1_1Value_a714c4448dd82b2802877ee6acfe143c4_icgraph.map  classskitter_1_1core_1_1Value_a73f47471acfa58e55218752b5c09c0bc_cgraph.map  classskitter_1_1core_1_1Value_a8005a724e842e39b113ec9d75be41a66_icgraph.md5  classskitter_1_1core_1_1Value_a832b3042deada688d2dae5f101502210_icgraph.md5  classskitter_1_1core_1_1Value_a9d8b2a54f7ac673f7ed237b077f7b28b_icgraph.md5  classskitter_1_1core_1_1Value_a9dca512aff4b2f938b5ec66e4bb4f5b6_cgraph.md5  classskitter_1_1core_1_1Value_aa9fb7af6be0c8be4c1c1993ddcadd161_icgraph.md5  classskitter_1_1core_1_1Value_ac23404cddadcc129aa713ded2fb320d4_cgraph.md5  classskitter_1_1core_1_1Value_ac71181636cfc123cc04f96c2e8d97605_icgraph.map  classskitter_1_1core_1_1Value_ad5dbec6c292f6f1073ca51430f998ccd_icgraph.map  classskitter_1_1core_1_1Value_ad5dbec6c292f6f1073ca51430f998ccd_icgraph.md5  classskitter_1_1core_1_1Value_ad606c6ce113d0851bb153b3d3f3e7623_cgraph.map  classskitter_1_1core_1_1Value_ad606c6ce113d0851bb153b3d3f3e7623_cgraph.md5  (+157 more)
.github/workflows/: doxygen.yml
cmake/: skitrConfig.cmake.in
docs/: architecture.md  doxygen-custom.css  getting-started.md
docs/html/: annotated.html  architecture_8md.html  classskitter_1_1core_1_1Value.html  classskitter_1_1core_1_1Value.js  classskitter_1_1core_1_1Value__coll__graph.md5  classskitter_1_1core_1_1Value_a0872b2667a35a8aaefb0bebe487150a8_cgraph.map  classskitter_1_1core_1_1Value_a0872b2667a35a8aaefb0bebe487150a8_cgraph.md5  classskitter_1_1core_1_1Value_a0ac6371c7aa04361b1926fe1efe51206_icgraph.map  classskitter_1_1core_1_1Value_a0ba0d64df67a44f0d21b4a26df8526a2_icgraph.md5  classskitter_1_1core_1_1Value_a0f039b6513797993c638a9fa0fd4d03f_icgraph.map  classskitter_1_1core_1_1Value_a1e0bd2d13e5284d3408366e0f380dffe_icgraph.md5  classskitter_1_1core_1_1Value_a40c5863401f9be1667e9d9d8bb9302cf_cgraph.map  classskitter_1_1core_1_1Value_a40c5863401f9be1667e9d9d8bb9302cf_icgraph.md5  classskitter_1_1core_1_1Value_a449a489960390d96abff06607d0ce595_icgraph.map  classskitter_1_1core_1_1Value_a449a489960390d96abff06607d0ce595_icgraph.md5  classskitter_1_1core_1_1Value_a472a547840f3926badd1d19047fe39b5_cgraph.map  classskitter_1_1core_1_1Value_a472a547840f3926badd1d19047fe39b5_cgraph.md5  classskitter_1_1core_1_1Value_a47b5c52aae3646bcc5b6514f6cc93125_icgraph.map  classskitter_1_1core_1_1Value_a4eb0aa7506a5dbd04edb0a5eac11f5a0_cgraph.map  classskitter_1_1core_1_1Value_a4eb0aa7506a5dbd04edb0a5eac11f5a0_cgraph.md5  classskitter_1_1core_1_1Value_a4eb0aa7506a5dbd04edb0a5eac11f5a0_icgraph.md5  classskitter_1_1core_1_1Value_a5763640d40a2979d558ec11d1a76e985_cgraph.map  classskitter_1_1core_1_1Value_a6183a84d9ff184c76d9ddfb02181d221_icgraph.md5  classskitter_1_1core_1_1Value_a64b371e896afe7118eb40b5c0f74cb63_cgraph.map  classskitter_1_1core_1_1Value_a6ce2465b448498ca7c24242a2930a635_cgraph.map  classskitter_1_1core_1_1Value_a6ce2465b448498ca7c24242a2930a635_cgraph.md5  classskitter_1_1core_1_1Value_a714c4448dd82b2802877ee6acfe143c4_cgraph.map  classskitter_1_1core_1_1Value_a714c4448dd82b2802877ee6acfe143c4_cgraph.md5  classskitter_1_1core_1_1Value_a714c4448dd82b2802877ee6acfe143c4_icgraph.md5  classskitter_1_1core_1_1Value_a73f47471acfa58e55218752b5c09c0bc_cgraph.md5  classskitter_1_1core_1_1Value_a73f47471acfa58e55218752b5c09c0bc_icgraph.map  classskitter_1_1core_1_1Value_a73f47471acfa58e55218752b5c09c0bc_icgraph.md5  classskitter_1_1core_1_1Value_a8005a724e842e39b113ec9d75be41a66_icgraph.map  (+145 more)
search/: all_1.js  all_11.js  all_13.js  all_16.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_5.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_5.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_f.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_2.js  typedefs_5.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+4 more)
src/: client.cpp  main.cpp
src/core/: value.cpp
src/protocol/: json_protocol.cpp
tests/: CMakeLists.txt
tests/core/: error_tests.cpp  message_tests.cpp  value_tests.cpp
tests/protocol/: json_protocol_tests.cpp
tests/registry/: method_registry_tests.cpp
tests/runtime/: dispatcher_tests.cpp
tests/transport/: server_integration_test.cpp
(+45 files in other folders)
